# caophim-python

./: .build.yml  .gitignore  Makefile  README.md  app.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.builds/: debian-master.yml  debian.yml
caophim/: settings.py
main/: tests.py
main/migrations/: 0001_initial.py
src/caophim/: __init__.py  conf.py  settings.py  urls.py  wsgi.py
src/caophim_web/: apps.py  context_processors.py  forms.py  models.py  views.py
src/caophim_web/fixtures/: boards.json
src/caophim_web/migrations/: 0001_initial.py
src/caophim_web/static/caophim_web/css/: base.css  reset.css
src/caophim_web/templates/: base.html  board.html  thread.html
src/caophim_web/templates/includes/: create_reply_form.html  create_thread_form.html  form.html  post.html
src/caophim_web/tests/: test_models.py  test_views.py
src/caoweb/: admin.py  apps.py  context_processors.py  forms.py  models.py  tests.py  views.py
src/caoweb/fixtures/: boards.json
src/caoweb/migrations/: 0001_initial.py
src/caoweb/static/caoweb/css/: base.css
src/caoweb/templates/: base.html  board.html  thread.html
src/caoweb/templates/includes/: create_reply_form.html  create_thread_form.html
src/caoweb/tests/: test_models.py  test_views.py
src/main/: models.py  tests.py
src/main/migrations/: 0001_initial.py
