[tool.poetry]
name = "caophim"
version = "0.1.0"
description = ""
authors = ["Bùi Thành Nhân <hi@imnhan.com>"]

[tool.poetry.scripts]
manage = "caophim:manage"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0"
psycopg2 = "^2.8"
gunicorn = "^20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
