[tool.poetry]
name = "caophim"
version = "0.1.0"
description = ""
authors = ["Bùi Thành Nhân <hi@imnhan.com>"]
packages = [
    { include = "caophim", from = "src" },
    { include = "main", from = "src" },
]

[tool.poetry.scripts]
manage = "caophim:manage"
generate-config = "caophim:generate_config"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0"
psycopg2 = "^2.8"
gunicorn = "^20.0"
goodconf = "^1.0"

[tool.poetry.dev-dependencies]
isort = "^4.3"
flake8 = "^3.7"
black = {version = "^19.10b0", allows-prereleases = true}
ipdb = "^0.12.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
