[tool.poetry]
name = "caophim"
version = "0.1.0"
description = ""
authors = ["Bùi Thành Nhân <hi@imnhan.com>"]
packages = [
    { include = "caophim", from = "src" },
    { include = "caophim_web", from = "src" },
]

[tool.poetry.scripts]
caophim-manage = "caophim:manage"
caophim-generate-config = "caophim:generate_config"
caophim-generate-psql-envars = "caophim:generate_psql_envars"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0"
psycopg2 = "^2.8"
gunicorn = "^20.0"
goodconf = "^1.0"
django-storages = "^1.8"
Pillow = "^6.2"
boto3 = "^1.10"
ulid-py = "^0.0.12"

[tool.poetry.dev-dependencies]
isort = "^4.3"
flake8 = "^3.7"
black = {version = "^19.10b0", allows-prereleases = true}
ipdb = "^0.12.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
